Update Filmuniversität Babelsberg KONRAD WOLF

--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -13,7 +13,7 @@
     "### Sascha Spors, Matthias Geier, Hagen Wierstorf\n",
     "\n",
     "* Institute of Communications Engineering, University of Rostock\n",
-    "* Filmuniversität Babelsberg Konrad Wolf\n",
+    "* Filmuniversität Babelsberg *KONRAD WOLF*\n",
     "\n",
     "Sascha.Spors@uni-rostock.de\n",
     "\n",
