--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -217,7 +217,7 @@
     "# Personal Experience\n",
     "\n",
     "* public release of the SoundScape Renderer (SSR) in 20xx\n",
-    "* toolboxes, datasets, open educational resources (numbers + selected examples), Open Science in two!ears\n",
+    "* toolboxes, datasets, open educational resources (numbers + selected examples), Open Science in Two!Ears\n",
     "* data management\n",
     "    * internal: Redmine, svn, git\n",
     "    * public: github, zenodo\n",
