--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -229,7 +229,8 @@
     "* more citations []\n",
     "\n",
     "**Drawbacks**\n",
-    "* initial effort"
+    "* initial effort (training, ...)\n",
+    "* missing versioning tool/platform for data bases"
    ]
   },
   {
