--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "# Reproducibility of a Listening Experiment\n",
     "\n",
-    "1. Problem Statement, Thesis\n",
+    "1. Thesis\n",
     "2. Design of the Listening Experiment\n",
     "3. Generation of Stimuli\n",
     "4. Graphical User Interface\n",
@@ -67,18 +67,23 @@
     }
    },
    "source": [
-    "# Classification of Reproducibility \n",
-    "[Stodden, 2013]\n",
+    "# The Scientific Method\n",
     "\n",
-    "1. Empirical\n",
+    "**Branches of the scientific method** [Donoho, 2009]\n",
+    "1. Deductive $\\rightarrow$ mathematics, formal logic\n",
     "\n",
-    "2. Computational\n",
-    "    1. Deductive: mathematics, formal logic\n",
-    "    2. Empirical: statistical analysis of controlled experiments\n",
-    "    3. Computational: large-scale simulation\n",
-    "    4. Computational: data-driven computational science\n",
-    "    \n",
-    "3. Statistical"
+    "2. Empirical $\\rightarrow$ statistical analysis of controlled experiments\n",
+    "\n",
+    "3. Computational\n",
+    "    1. large-scale simulations\n",
+    "    2. data-driven computational science\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Classification of Reproducibility** [Stodden, 2014]\n",
+    "* empirical reproducibility\n",
+    "* computational reproducibility\n",
+    "* statistical reproducibility"
    ]
   },
   {
@@ -146,7 +151,7 @@
     "* Set a standard in the field (82% / 76%)\n",
     "* Improve the calibre of research (85% / 74%)\n",
     "\n",
-    "[Stodden, 2010], N=134"
+    "Results from[Stodden, 2010], N=134"
    ]
   },
   {
@@ -160,7 +165,7 @@
     "# Management of Research Data\n",
     "\n",
     "* a systematic management of research data is a prerequisite for open and reproducible science\n",
-    "* becoming mandatory (DFG, H2020, NSF, ...)\n",
+    "* becoming mandatory in funding schemes (DFG, H2020, NSF, ...)\n",
     "\n",
     "**Best Practices** [DFG, HRK, Stodden, H2020]\n",
     "* develop a comprehensive data management plan\n",
@@ -180,7 +185,21 @@
    "source": [
     "# Services for Open Science\n",
     "\n",
-    "A wide variety of public services are ready to use..."
+    "Generic repositories including version tracking\n",
+    "* GitHub\n",
+    "* Bitbuckes\n",
+    "\n",
+    "Repositories for Research Data\n",
+    "* Zenodo\n",
+    "* Research Compendia\n",
+    "* Reproducible Research\n",
+    "* ResearchGate\n",
+    "\n",
+    "Virtual Research Environments\n",
+    "* Open Science Framework\n",
+    "\n",
+    "Journals\n",
+    "* Journal of Open Research Software"
    ]
   },
   {
@@ -198,7 +217,7 @@
     "* legal implications are complex and hard to oversee\n",
     "\n",
     "**Available Licensing Frameworks**\n",
-    "* Software: GNU, BSD, MIT, ...\n",
+    "* Software: GNU Public License, BSD, MIT, ...\n",
     "* Content: Creative Commons, ...\n",
     "\n",
     "**Recommendations**\n",
@@ -216,19 +235,18 @@
    "source": [
     "# Personal Experience\n",
     "\n",
-    "* public release of the SoundScape Renderer (SSR) in 20xx\n",
+    "* public release of the SoundScape Renderer (SSR) in 2010\n",
     "* toolboxes, datasets, open educational resources (numbers + selected examples), Open Science in Two!Ears\n",
-    "* data management\n",
-    "    * internal: Redmine, svn, git\n",
-    "    * public: github, zenodo\n",
+    "* internal data management: Redmine, svn, git\n",
+    "* public releases: github, zenodo, wordpress\n",
     "\n",
     "**Benefits**\n",
     "* documentation/clean up/discussions for public release\n",
     "* bug reports\n",
     "* positive community feedback\n",
-    "* more citations []\n",
+    "* potentially more citations []\n",
     "\n",
-    "**Drawbacks**\n",
+    "**Challenges**\n",
     "* initial effort (training, ...)\n",
     "* missing versioning tool/platform for data bases"
    ]
@@ -245,7 +263,24 @@
     "\n",
     "* reproducibility of results is essential for the scientific method\n",
     "* Open Science does not ensure reproducibility by itself\n",
-    "* scientific innovation vs. evaluation procedures"
+    "* scientific innovation vs. evaluation measures\n",
+    "* global trend towards sharing\n",
+    "* data repository for acoustics/audio $\\rightarrow$ talk by Stefan Weinzierl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# References\n",
+    "\n",
+    "* [Stodden, 2009] Vitoria Stodden, The Legal Framework for Reproducible Scientific Research, Computing in Science & Engineering, January/February 2009.\n",
+    "* [Stodden, 2014] Victoria Stodden, Resolving Reproducibility in Computational Science: Tools, Policy, and Culture, 2014.\n",
+    "* [Donoho, 2009] David Donoho, Arian Maleki, Inam Rahman, Morteza Shahram, Victoria Stodden, 15 Years of Reproducible Research in Computational Harmonic Analysis, Computing in Science and Engineering, 11(1), 2009."
    ]
   }
  ],
