--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -122,7 +122,7 @@
     "4. -> Open Source\n",
     "5. -> Open Data\n",
     "6. -> Open Data, Open Source\n",
-    "7. -> Open Access"
+    "7. -> Open Access, Open Peer Review"
    ]
   },
   {
