Change title of motivational slide
... and remove the point about "funding organization".

--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -28,12 +28,11 @@
     }
    },
    "source": [
-    "# Reproducibility - Who Cares? \n",
+    "# Who should benefit from my research? \n",
     "\n",
     "* myself\n",
     "* my future self\n",
     "* my boss\n",
-    "* my funding organization\n",
     "* my colleagues\n",
     "* other researchers\n",
     "* all people in the world\n",
