Added ease of reproducibilty to conclusion

--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -261,7 +261,7 @@
     "# Conclusions\n",
     "\n",
     "* reproducibility of results is essential for the scientific method\n",
-    "* Open Science does not ensure reproducibility by itself\n",
+    "* Open Science does not ensure the ease of reproducibility by itself\n",
     "* scientific innovation vs. evaluation measures\n",
     "* global trend towards sharing\n",
     "* data repository for acoustics/audio $\\rightarrow$ talk by Stefan Weinzierl"
