--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -49,13 +49,31 @@
    "source": [
     "# Reproducibility of a Listening Experiment\n",
     "\n",
-    "1. Thesis\n",
+    "1. Idea\n",
     "2. Design of the Listening Experiment\n",
-    "3. Generation of Stimuli\n",
-    "4. Graphical User Interface\n",
-    "5. Ratings\n",
-    "6. Statistical Analysis\n",
-    "7. Publication"
+    "    * hypothesis\n",
+    "    * design\n",
+    "3. Implementation & Computation\n",
+    "    * mathematical derivations\n",
+    "    * implementation of signal processing\n",
+    "    * implementation of graphical user interface & control logic\n",
+    "    * numerical simulations\n",
+    "    * generation of stimuli\n",
+    "4. Experiment\n",
+    "5. Analysis\n",
+    "    * anonymization of data\n",
+    "    * outlier removal\n",
+    "    * statistical analysis\n",
+    "6. Manuscript\n",
+    "    * text, references\n",
+    "    * visualization of results (plots)\n",
+    "7. Peer Review\n",
+    "    * ratings, comments\n",
+    "    * revision of paper\n",
+    "8. Publication\n",
+    "9. Aftermath\n",
+    "    * reproduction by third parties\n",
+    "    * errata, code revision"
    ]
   },
   {
@@ -235,7 +253,8 @@
     "# Personal Experience\n",
     "\n",
     "* public release of the SoundScape Renderer (SSR) in 2010\n",
-    "* toolboxes, datasets, open educational resources (numbers + selected examples), Open Science in Two!Ears\n",
+    "* toolboxes, datasets, open educational resources (numbers + selected examples)\n",
+    "* Open Science in Two!Ears\n",
     "* internal data management: Redmine, svn, git\n",
     "* public releases: github, zenodo, wordpress\n",
     "\n",
@@ -261,7 +280,7 @@
     "# Conclusions\n",
     "\n",
     "* reproducibility of results is essential for the scientific method\n",
-    "* Open Science does not ensure the ease of reproducibility by itself\n",
+    "* Open Science by itself does not ensure the ease of reproducibility\n",
     "* scientific innovation vs. evaluation measures\n",
     "* global trend towards sharing\n",
     "* data repository for acoustics/audio $\\rightarrow$ talk by Stefan Weinzierl"
