--- a/talk/talk_towards_open_science.ipynb
+++ b/talk/talk_towards_open_science.ipynb
@@ -69,10 +69,11 @@
     "    * visualization of results (plots)\n",
     "7. Peer Review\n",
     "    * ratings, comments\n",
-    "    * revision of paper\n",
+    "    * revision of manuscript\n",
     "8. Publication\n",
     "9. Aftermath\n",
     "    * reproduction by third parties\n",
+    "    * post publication review\n",
     "    * errata, code revision"
    ]
   },
@@ -133,13 +134,15 @@
    "source": [
     "# Reproducibility of a Listening Experiment - Revisited\n",
     "\n",
-    "1. -> Open Access\n",
+    "1. \n",
     "2. -> Open Methodology\n",
     "3. -> Open Data, Open Source\n",
-    "4. -> Open Source\n",
-    "5. -> Open Data\n",
-    "6. -> Open Data, Open Source\n",
-    "7. -> Open Access, Open Peer Review"
+    "4. -> Open Data\n",
+    "5. -> Open Data, Open Source, Open Methodology\n",
+    "6. -> Open Data, Open Access\n",
+    "7. -> Open Peer Review\n",
+    "8. -> Open Access\n",
+    "9. -> Open Access"
    ]
   },
   {
@@ -155,20 +158,20 @@
     "### Selected Results from a Survey of the Machine Learning Community\n",
     "\n",
     "**Barriers (Data / Code)**\n",
-    "* Time to document and clean up (54% / 77%)\n",
-    "* Dealing with questions from users (34% / 52%)\n",
-    "* Not receiving attribution (44% / 42%)\n",
-    "* Possibility of patents (-- / 40%)\n",
-    "* Legal barriers (e.g. copyright) (34% / 41%)\n",
+    "* time to document and clean up (54% / 77%)\n",
+    "* dealing with questions from users (34% / 52%)\n",
+    "* not receiving attribution (44% / 42%)\n",
+    "* possibility of patents (-- / 40%)\n",
+    "* legal barriers (e.g. copyright) (34% / 41%)\n",
     "\n",
     "**Incentives (Data / Code)**\n",
-    "* Encourage scientific advancement (81% / 91%)\n",
-    "* Encourage sharing in others (90% / 79%)\n",
-    "* Be a good community member (86% / 79%)\n",
-    "* Set a standard in the field (82% / 76%)\n",
-    "* Improve the calibre of research (85% / 74%)\n",
+    "* encourage scientific advancement (81% / 91%)\n",
+    "* encourage sharing in others (90% / 79%)\n",
+    "* be a good community member (86% / 79%)\n",
+    "* set a standard in the field (82% / 76%)\n",
+    "* improve the calibre of research (85% / 74%)\n",
     "\n",
-    "Results from[Stodden, 2010], N=134"
+    "Results from [Stodden, 2010], N=134"
    ]
   },
   {
@@ -204,7 +207,7 @@
     "\n",
     "Generic repositories including version tracking\n",
     "* GitHub\n",
-    "* Bitbuckes\n",
+    "* Bitbucket\n",
     "\n",
     "Repositories for Research Data\n",
     "* Zenodo\n",
@@ -253,7 +256,7 @@
     "# Personal Experience\n",
     "\n",
     "* public release of the SoundScape Renderer (SSR) in 2010\n",
-    "* toolboxes, datasets, open educational resources (numbers + selected examples)\n",
+    "* various toolboxes, datasets, open educational resources ($\\rightarrow$ https://github.com/spatialaudio)\n",
     "* Open Science in Two!Ears\n",
     "* internal data management: Redmine, svn, git\n",
     "* public releases: github, zenodo, wordpress\n",
