--- a/talk/talk_towards_open_science.tex
+++ b/talk/talk_towards_open_science.tex
@@ -60,7 +60,6 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 \begin{itemize}
 \item[$\square$] myself
 \item[$\square$] my future self
-\item[$\square$] my boss
 \item[$\square$] my colleagues
 \item[$\square$] other researchers
 \item[$\square$] all people in the world
@@ -78,221 +77,126 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 
 
 % =============================================================================
-\begin{frame}{Perceptual Study -- Procedure}
-\framesubtitle{1. Idea}
+\begin{frame}{Example -- Perceptual Study}
+\framesubtitle{Procedure}
 
+\begin{columns}[T]
+\begin{column}{.41\linewidth}
+
+\begin{enumerate}
+\item<1> Idea
+\item<2> Design of experiment
+\item<3> Computation
+\item<4> Experiment
+\item<5> Analysis
+\item<6> Manuscript
+\item<7> Peer review
+\item<8> Publication
+\item<9> Aftermath
+\end{enumerate}
+\vfill
+
+\end{column}
+%
+\begin{column}{.49\linewidth}
+
+\only<1>{%
 \begin{center}
-\includegraphics[scale=.25]{./figs/Bright-Idea-800px}
+\includegraphics[scale=.20]{./figs/Bright-Idea-800px}
 \end{center}
 
-{\tiny from https://openclipart.org/}
+{\tiny \hfill from https://openclipart.org/}
+}
 
-\end{frame}
-
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{2. Design of experiment}
-
-\begin{columns}
-\begin{column}{.45\linewidth}
+\only<2>{%
 \begin{itemize}
 \item hypothesis
-\item design of listening experiment
+\item procedure
+\item test subjects
+\item stimuli
+\item ...
 \end{itemize}
-\end{column}
-%
-\begin{column}{.45\linewidth}
-\OM
-\end{column}
-\end{columns}
+}
 
-\end{frame}
-
-
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{3. Computation and implementation}
-
-\begin{columns}
-\begin{column}{.45\linewidth}
+\only<3>{%
+\vspace{5mm}
 \begin{itemize}
 \item mathematical derivations
-\item implementation of simulations,\\ signal processing
+\item implementation of simulations
+\item numerical simulations
+\item generation of stimuli \\[2ex]
 \item implementation of control logic,\\ graphical user interface (GUI)
 \end{itemize}
+}
 
-\vspace{3mm}
-
-\begin{itemize}
-\item numerical simulations
-\item generation of stimuli
-\end{itemize}
-\end{column}
-%
-\begin{column}{.45\linewidth}
-\OD
+\only<4>{%
 \vspace{5mm}
-\OS
-\end{column}
-\end{columns}
-\end{frame}
+\begin{center}
+\includegraphics[scale=.13]{experiment}
+\end{center}
+}
 
-
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{4. Experiment}
-
-\begin{columns}
-\begin{column}{.45\linewidth}
-Illustration of experiment...
-
-Output: raw data, protocols
-\end{column}
-%
-\begin{column}{.45\linewidth}
-\OD
-\end{column}
-\end{columns}
-
-
-
-\end{frame}
-
-
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{5. Analysis}
-
-\begin{columns}
-\begin{column}{.45\linewidth}
+\only<5>{%
 \begin{itemize}
 \item anonymization of data
 \item outlier removal
 \item statistical analysis
 \end{itemize}
 
-Output: processed data
-\end{column}
-%
-\begin{column}{.45\linewidth}
-\OM
-\vspace{5mm}
-\OD
-\vspace{5mm}
-\OS
-\end{column}
-\end{columns}
+\textbf{Output:} processed data
+}
 
-\end{frame}
-
-
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{6. Manuscript}
-
-\begin{columns}
-\begin{column}{.45\linewidth}
+\only<6>{%
 \begin{itemize}
 \item text
 \item references
 \item visualization of results (plots)
 \end{itemize}
-\end{column}
-%
-\begin{column}{.45\linewidth}
-\OS
-\vspace{5mm}
-\OA
-\end{column}
-\end{columns}
 
-\end{frame}
+\begin{center}
+\includegraphics[page=1,scale=.15]{paper}
+\end{center}
+}
 
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{7. Pre-publication peer review}
-
-\begin{columns}
-\begin{column}{.45\linewidth}
+\only<7>{%
 \begin{itemize}
 \item ratings, comments
-\item revision of manuscript
+\item revised manuscript
 \end{itemize}
-\end{column}
-%
-\begin{column}{.45\linewidth}
-\OPR
-\end{column}
-\end{columns}
+}
 
-\end{frame}
-
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{8. Publication}
-
-\begin{columns}
-\begin{column}{.45\linewidth}
+\only<8>{%
 \begin{itemize}
 \item text
 \item references
 \item visualization of results (plots)
+\item presentation
 \end{itemize}
-\end{column}
-%
-\begin{column}{.45\linewidth}
 
-\includegraphics[page=1,width=120pt]{/Users/spors/Documents/publications/published/DAGA_2015/paper/DAGA2015_WFS_edge_effects.pdf}
+\begin{center}
+\includegraphics[page=1,scale=.15]{paper}
+\end{center}
+}
 
-\end{column}
-\end{columns}
-
-\end{frame}
-
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{9. Aftermath}
-
-\begin{columns}
-\begin{column}{.45\linewidth}
+\only<9>{%
 \begin{itemize}
 \item reproduction by third parties
 \item post-publication review
 \item errata, code revision
 \item ideas for next study
 \end{itemize}
-\end{column}
-%
-\begin{column}{.45\linewidth}
-\OA
+}
+
 \end{column}
 \end{columns}
-
-\end{frame}
-
-% =============================================================================
-\begin{frame}[noframenumbering]{Perceptual Study -- Procedure}
-\framesubtitle{Overview}
-
-\begin{enumerate}
-\item Idea
-\item Design of experiment
-\item Computation and implementation
-\item Experiment
-\item Analysis
-\item Manuscript
-\item Peer review
-\item Publication
-\item Aftermath
-\end{enumerate}
 
 \end{frame}
 
 
 % =============================================================================
 \begin{frame}{The Scientific Method}
+\framesubtitle{Branches {\tiny [Donoho 2009, Stodden 2014a]}}
 
-\textbf{Branches of the Scientific Method} {\tiny [Donoho 2009]}
 \begin{enumerate}
 \item deductive $\rightarrow$ mathematics, formal logic
 %
@@ -301,26 +205,17 @@ Output: processed data
 \item computational
 \begin{itemize}
 \item large-scale simulations
-\hspace{14mm}$\smash{\left.\rule{0pt}{.5\dimexpr3\baselineskip+3\itemsep+2\parskip}\right\}
+\hspace{16mm}$\smash{\left.\rule{0pt}{.5\dimexpr3\baselineskip+3\itemsep+2\parskip}\right\}
       \text{\parbox{2in}{potentially new branch(es)}}}$
 \item data-driven computational science
 \end{itemize}
 \end{enumerate}
 
-\vfill
-
-\textbf{Types of Reproducibility} {\tiny [Stodden 2014a]}
-\begin{itemize}
-\item empirical
-\item computational
-\item statistical
-\end{itemize}
-
 \end{frame}
 
 
 % =============================================================================
-\begin{frame}{Open Science}
+\begin{frame}{The Elements of Open Science}
 
 
 \begin{tikzpicture}[node distance=5mm and 2mm]
@@ -339,19 +234,84 @@ Output: processed data
 
 
 % =============================================================================
-\begin{frame}{Reproducibility of a Listening Experiment Revisited}
+\begin{frame}{Example -- Perceptual Study}
+\framesubtitle{Supporting reproducibility by Open Science}
 
+\begin{columns}[T]
+\begin{column}{.41\linewidth}
+
+\begin{enumerate}
+\item<1> Idea
+\item<2> Design of experiment
+\item<3> Computation
+\item<4> Experiment
+\item<5> Analysis
+\item<6> Manuscript
+\item<7> Peer review
+\item<8> Publication
+\item<9> Aftermath
+\end{enumerate}
+\vfill
+
+\end{column}
+%
+\begin{column}{.49\linewidth}
+
+\only<1>{}
+
+\only<2>{%
+\OM
+}
+
+\only<3>{%
+\OD
+\vspace{5mm}
+\OS
+}
+
+\only<4>{%
+\OD
+}
+
+\only<5>{%
+\OM
+\vspace{5mm}
+\OS
+\vspace{5mm}
+\OD
+}
+
+\only<6>{%
+\OA
+}
+
+\only<7>{%
+\OPR
+}
+
+\only<8>{%
+\OA
+\vspace{5mm}
+\OS
+\vspace{5mm}
+\OD
+}
+
+\only<9>{}
+
+\end{column}
+\end{columns}
 
 \end{frame}
 
 
 % =============================================================================
 \begin{frame}{Incentives and Barriers}
-\framesubtitle{Selected Results from a Survey of the Machine Learning Community}
+\framesubtitle{Selected results from a survey of the machine learning community}
 
-\textbf{Barriers}(\data{Data}/Code) {\tiny [Stodden 2014], N=134}
+\textbf{Barriers} {\tiny [Stodden 2014], N=134}
 \begin{itemize}
-\item time to document and clean up (\data{54}/77 \%)
+\item time to document and clean up (\data{54}/77 \%) \hfill (\data{Data}/Code)
 \item dealing with questions from users (\data{34}/52 \%)
 \item not receiving attribution (\data{44}/42 \%)
 \item possibility of patents (\data{--}/40 \%)
@@ -360,7 +320,7 @@ Output: processed data
 
 \vspace{3mm}
 
-\textbf{Incentives}(\data{Data}/Code)
+\textbf{Incentives}
 \begin{itemize}
 \item encourage scientific advancement (\data{81}/91 \%)
 \item encourage sharing in others (\data{90}/79 \%)
@@ -377,7 +337,7 @@ Output: processed data
 
 \begin{itemize}
 \item systematic management of research data is a prerequisite for open \\ and reproducible science
-\item becoming mandatory in funding schemes (DFG, Horizon 2020, NSF, ...)
+\item becoming mandatory (DFG, Horizon 2020, NSF, ...)
 \end{itemize}
 
 \vfill
@@ -395,7 +355,33 @@ Output: processed data
 
 
 % =============================================================================
-\begin{frame}{Public Services for Open Science}
+\begin{frame}{Copyright and Licenses}
+
+
+\begin{itemize}
+\item unclear situation when publishing data without explicit license
+\item license should be as open as possible to promote re-use
+\item legal implications are complex and hard to oversee
+\end{itemize}
+
+\vfill
+
+\textbf{Available Licensing Frameworks}
+\begin{itemize}
+\item Software: GNU Public License, BSD, MIT, ...
+\item Content: Creative Commons, ...
+\end{itemize}
+
+\textbf{Recommendations}
+\begin{itemize}
+\item Reproducible Research Standard (RRS) [Stodden, 2009]
+\end{itemize}
+
+\end{frame}
+
+
+% =============================================================================
+\begin{frame}{Services for Open Science (Selection)}
 
 \begin{columns}[T]
 \begin{column}{.45\linewidth}
@@ -437,37 +423,11 @@ Output: processed data
 
 
 % =============================================================================
-\begin{frame}{Copyright and Licenses}
-
-
-\begin{itemize}
-\item unclear situation when publishing data without explicit license
-\item license should be as open as possible in order to promote re-use
-\item legal implications are complex and hard to oversee
-\end{itemize}
-
-\vfill
-
-\textbf{Available Licensing Frameworks}
-\begin{itemize}
-\item Software: GNU Public License, BSD, MIT, ...
-\item Content: Creative Commons, ...
-\end{itemize}
-
-\textbf{Recommendations}
-\begin{itemize}
-\item Reproducible Research Standard (RRS) [Stodden, 2009]
-\end{itemize}
-
-\end{frame}
-
-
-% =============================================================================
 \begin{frame}{Personal Experience}
 
 \begin{itemize}
 \item public release of the SoundScape Renderer (SSR) in 2010
-\item various toolboxes, datasets, open educational resources
+\item various toolboxes, datasets, open access papers, open educational resources
 \item internal data management: Redmine, svn, git
 \item public releases: github, zenodo, wordpress
 \end{itemize}
@@ -477,14 +437,15 @@ Output: processed data
 \textbf{Benefits}
 \begin{itemize}
 \item documentation/clean up/discussions for public release
-\item bug reports
-\item positive community feedback
-\item potentially more citations {\tiny [?]}
+\item bug reports, positive community feedback
+\item potentially more citations {\tiny [Brody 2006]}
 \end{itemize}
+
+\vfill
 
 \textbf{Challenges}
 \begin{itemize}
-\item initial effort (training, ...)
+\item initial effort (e.g. training)
 \item missing versioning tool/platform for (large) data bases
 \end{itemize}
 
@@ -498,7 +459,7 @@ Output: processed data
 \item reproducibility of results is essential for the scientific method
 \item Open Science by itself does not ensure the ease of reproducibility
 \item evaluation measures contradict scientific innovation
-\item training and qualification is essential
+\item training and qualification required
 \end{itemize}
 
 \vfill
@@ -517,8 +478,9 @@ Output: processed data
 
 {\scriptsize
 \begin{description}
+\item[{[Brody 2006]}] T.D. Brody, Evaluating research impact through open access and scholary communication, PhD thesis, May 2006.
+\item[{[DFG 2013]}] Sicherung guter wissenschaftlicher Praxis, Deutsche Forschungsgemeinschaft, 2013.
 \item[{[Donoho 2009]}] David Donoho, Arian Maleki, Inam Rahman, Morteza Shahram, Victoria Stodden, 15 Years of Reproducible Research in Computational Harmonic Analysis, Computing in Science and Engineering, 11(1), 2009.
-\item[{[DFG 2013]}] Sicherung guter wissenschaftlicher Praxis, Deutsche Forschungsgemeinschaft, 2013. 
 \item[{[HRK 2014]}] Hochschulrektorenkonferenz. Management von Forschungsdaten - eine zentrale strategische Herausforderung für Hochschulleitungen, 13.5.2014.
 \item[{[H2020 2016]}] H2020 Programme: Guidelines of FAIR Data Management in Horizon 2020, European Research Commission, 26.7.2016.
 \item[{[Stodden 2009]}] Vitoria Stodden, The Legal Framework for Reproducible Scientific Research, Computing in Science \& Engineering, January/February 2009.
