Summarized the scientific method

--- a/talk/talk_towards_open_science.tex
+++ b/talk/talk_towards_open_science.tex
@@ -195,8 +195,16 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 
 % =============================================================================
 \begin{frame}{The Scientific Method}
-\framesubtitle{Branches {\tiny [Donoho 2009, Stodden 2014a]}}
 
+\begin{itemize}
+\item systematic observation, measurement, and experiment
+\item formulation, testing, and modification of hypotheses
+\item reproducibility is the ability to duplicate an experiment or study
+\end{itemize}
+
+\vfill
+
+\textbf{Branches} {\tiny [Donoho 2009, Stodden 2014a]}
 \begin{enumerate}
 \item deductive $\rightarrow$ mathematics, formal logic
 %
@@ -228,14 +236,14 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 \end{tikzpicture}
 
 \vspace{2mm}
-{\tiny adapted from [\url{https://en.wikipedia.org/wiki/Open_science}, \url{http://openscienceasap.org/open-science/]}}
+{\tiny adapted from \url{https://en.wikipedia.org/wiki/Open_science} and \url{http://openscienceasap.org/open-science}}
 
 \end{frame}
 
 
 % =============================================================================
 \begin{frame}{Example -- Perceptual Study}
-\framesubtitle{Supporting reproducibility by Open Science}
+\framesubtitle{Supporting Reproducibility by Open Science}
 
 \begin{columns}[T]
 \begin{column}{.41\linewidth}
